fix(security): configure CORS properly for frontend compatibility
- Add CorsConfigurationSource bean with explicit allowed origins
- Allow credentials for JWT authentication
- Permit OPTIONS preflight requests without authentication
- Remove CORS configuration from application.yml (handled in Java)
- Add specific allowed methods, headers and exposed headers

This fixes CORS preflight errors when frontend (React) attempts
to authenticate via the gateway.

Frontend origins allowed:
- http://localhost:3000 (React dev)
- http://localhost:5173 (Vite dev)